calculate loss on dynamically checked nb of GPUs

--- a/The Annotated Transformer.ipynb
+++ b/The Annotated Transformer.ipynb
@@ -1519,23 +1519,29 @@
     "    \"A multi-gpu loss compute and train function.\"\n",
     "    def __init__(self, generator, criterion, devices, opt=None, chunk_size=5):\n",
     "        # Send out to different gpus.\n",
+    "        self.criterion = criterion\n",
     "        self.generator = generator\n",
-    "        self.criterion = nn.parallel.replicate(criterion, \n",
-    "                                               devices=devices)\n",
+    "        self.criteria = [None for _ in range(len(devices) - 1)] \\\n",
+    "                        + [nn.parallel.replicate(criterion, devices=devices)]\n",
+    "        self.generators = [None for _ in range(len(devices) - 1)] \\\n",
+    "                          + [nn.parallel.replicate(generator, devices=devices)]\n",
+    "\n",
     "        self.opt = opt\n",
     "        self.devices = devices\n",
     "        self.chunk_size = chunk_size\n",
     "        \n",
     "    def __call__(self, out, targets, normalize):\n",
     "        total = 0.0\n",
-    "        generator = nn.parallel.replicate(self.generator, \n",
-    "                                                devices=self.devices)\n",
     "        out_scatter = nn.parallel.scatter(out, \n",
     "                                          target_gpus=self.devices)\n",
     "        out_grad = [[] for _ in out_scatter]\n",
     "        targets = nn.parallel.scatter(targets, \n",
     "                                      target_gpus=self.devices)\n",
-    "\n",
+    "        \n",
+    "        self.replicate_modules(len(out_scatter))\n",
+    "        generator = self.generators[len(out_scatter) - 1]\n",
+    "        criterion = self.criteria[len(out_scatter) - 1]\n",
+    "        \n",
     "        # Divide generating into chunks.\n",
     "        chunk_size = self.chunk_size\n",
     "        for i in range(0, out_scatter[0].size(1), chunk_size):\n",
@@ -1549,7 +1555,7 @@
     "            y = [(g.contiguous().view(-1, g.size(-1)), \n",
     "                  t[:, i:i+chunk_size].contiguous().view(-1)) \n",
     "                 for g, t in zip(gen, targets)]\n",
-    "            loss = nn.parallel.parallel_apply(self.criterion, y)\n",
+    "            loss = nn.parallel.parallel_apply(criterion, y)\n",
     "\n",
     "            # Sum and normalize loss\n",
     "            l = nn.parallel.gather(loss, \n",
@@ -1572,7 +1578,14 @@
     "            o1.backward(gradient=o2)\n",
     "            self.opt.step()\n",
     "            self.opt.optimizer.zero_grad()\n",
-    "        return total * normalize"
+    "        return total * normalize\n",
+    "    \n",
+    "    def replicate_modules(self, var_length):\n",
+    "        if var_length != len(self.devices):\n",
+    "            idx = var_length - 1\n",
+    "            if not self.criteria[idx] or not self.generators[idx]:\n",
+    "                self.criteria[idx] = nn.parallel.replicate(self.criterion, devices=self.devices[:var_length])\n",
+    "                self.generators[idx] = nn.parallel.replicate(self.generator, devices=self.devices[:var_length])\n"
    ]
   },
   {
