Updates numpy loss tensor accessor. Previously broken.

--- a/The Annotated Transformer.ipynb
+++ b/The Annotated Transformer.ipynb
@@ -1260,7 +1260,7 @@
     "        if self.opt is not None:\n",
     "            self.opt.step()\n",
     "            self.opt.optimizer.zero_grad()\n",
-    "        return loss.data[0] * norm"
+    "        return loss.item() * norm"
    ]
   },
   {
