Remove the import statement the_annotated_transformer in the notebook
Remove the  import statement the_annotated_transformer in the notebook

--- a/the_annotated_transformer.ipynb
+++ b/the_annotated_transformer.ipynb
@@ -102,7 +102,10 @@
    "execution_count": null,
    "id": "c208412a",
    "metadata": {
-    "id": "NwClcbH6Tsp8"
+    "id": "NwClcbH6Tsp8",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -115,7 +118,10 @@
    "id": "5234abe9",
    "metadata": {
     "id": "NwClcbH6Tsp8",
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -132,7 +138,10 @@
    "id": "63f46405",
    "metadata": {
     "id": "v1-1MX6oTsp9",
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -169,7 +178,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cf54b867",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# Some convenience helper functions used throughout the notebook\n",
@@ -307,7 +320,10 @@
    "execution_count": null,
    "id": "28b470fd",
    "metadata": {
-    "id": "k0XGXhzRTsqB"
+    "id": "k0XGXhzRTsqB",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -342,7 +358,10 @@
    "id": "a71e4a8a",
    "metadata": {
     "id": "NKGoH2RsTsqC",
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -401,7 +420,10 @@
    "execution_count": null,
    "id": "99f6c047",
    "metadata": {
-    "id": "2gxTApUYTsqD"
+    "id": "2gxTApUYTsqD",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -415,7 +437,10 @@
    "execution_count": null,
    "id": "32f4c112",
    "metadata": {
-    "id": "xqVTz9MkTsqD"
+    "id": "xqVTz9MkTsqD",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -453,7 +478,10 @@
    "execution_count": null,
    "id": "e93968a2",
    "metadata": {
-    "id": "3jKa_prZTsqE"
+    "id": "3jKa_prZTsqE",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -497,7 +525,10 @@
    "execution_count": null,
    "id": "27f1da7f",
    "metadata": {
-    "id": "U1P7zI0eTsqE"
+    "id": "U1P7zI0eTsqE",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -535,7 +566,10 @@
    "execution_count": null,
    "id": "8c799a3d",
    "metadata": {
-    "id": "qYkUFr6GTsqE"
+    "id": "qYkUFr6GTsqE",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -571,7 +605,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "845b7803",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "class Decoder(nn.Module):\n",
@@ -608,7 +646,10 @@
    "execution_count": null,
    "id": "302342c4",
    "metadata": {
-    "id": "M2hA1xFQTsqF"
+    "id": "M2hA1xFQTsqF",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -651,7 +692,10 @@
    "execution_count": null,
    "id": "23a3aa02",
    "metadata": {
-    "id": "QN98O2l3TsqF"
+    "id": "QN98O2l3TsqF",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -682,7 +726,10 @@
    "execution_count": null,
    "id": "0ca034b7",
    "metadata": {
-    "id": "ht_FtgYAokC4"
+    "id": "ht_FtgYAokC4",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -768,7 +815,10 @@
    "id": "4d7578ca",
    "metadata": {
     "id": "qsoVxS5yTsqG",
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -866,7 +916,10 @@
    "execution_count": null,
    "id": "805ef75e",
    "metadata": {
-    "id": "D2LBMKCQTsqH"
+    "id": "D2LBMKCQTsqH",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -976,7 +1029,10 @@
    "execution_count": null,
    "id": "3501f422",
    "metadata": {
-    "id": "6HHCemCxTsqH"
+    "id": "6HHCemCxTsqH",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -1018,7 +1074,10 @@
    "execution_count": null,
    "id": "397ddb62",
    "metadata": {
-    "id": "pyrChq9qTsqH"
+    "id": "pyrChq9qTsqH",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -1076,7 +1135,10 @@
    "execution_count": null,
    "id": "ad1bb3e9",
    "metadata": {
-    "id": "zaHGD4yJTsqH"
+    "id": "zaHGD4yJTsqH",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -1122,7 +1184,10 @@
    "id": "2119e4f3",
    "metadata": {
     "id": "rnvHk_1QokC6",
-    "type": "example"
+    "type": "example",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -1188,7 +1253,10 @@
    "execution_count": null,
    "id": "80e7d810",
    "metadata": {
-    "id": "mPe1ES0UTsqI"
+    "id": "mPe1ES0UTsqI",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -1235,7 +1303,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "58bdf905",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "def inference_test():\n",
@@ -1317,7 +1389,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9591934e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "class Batch:\n",
@@ -1369,7 +1445,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fd396343",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "class TrainState:\n",
@@ -1386,7 +1466,10 @@
    "execution_count": null,
    "id": "46f0581e",
    "metadata": {
-    "id": "2HAZD3hiTsqJ"
+    "id": "2HAZD3hiTsqJ",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -1539,7 +1622,10 @@
    "execution_count": null,
    "id": "2fabf93b",
    "metadata": {
-    "id": "zUz3PdAnVg4o"
+    "id": "zUz3PdAnVg4o",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -1561,7 +1647,10 @@
    "id": "814f1c3f",
    "metadata": {
     "id": "l1bnrlnSV8J5",
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -1661,7 +1750,10 @@
    "id": "4453ce26",
    "metadata": {
     "id": "shU2GyiETsqK",
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -1708,7 +1800,10 @@
    "id": "466e24a9",
    "metadata": {
     "id": "EZtKaaQNTsqK",
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -1776,7 +1871,10 @@
    "execution_count": null,
    "id": "13318f26",
    "metadata": {
-    "id": "78EHzLP7TsqK"
+    "id": "78EHzLP7TsqK",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -1841,7 +1939,10 @@
    "execution_count": null,
    "id": "8427157a",
    "metadata": {
-    "id": "g1aTxeqqTsqK"
+    "id": "g1aTxeqqTsqK",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -1870,7 +1971,10 @@
    "execution_count": null,
    "id": "9bff3406",
    "metadata": {
-    "id": "3J8EJm87TsqK"
+    "id": "3J8EJm87TsqK",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -1920,7 +2024,10 @@
    "id": "8539632a",
    "metadata": {
     "id": "N2UOpnT3bIyU",
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -1947,7 +2054,10 @@
    "metadata": {
     "id": "qgIZ2yEtdYwe",
     "lines_to_next_cell": 2,
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -2034,7 +2144,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f5b1e7ae",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# Load spacy tokenizer models, download them if they haven't been\n",
@@ -2065,7 +2179,10 @@
    "metadata": {
     "id": "t4BszXXJTsqL",
     "lines_to_next_cell": 2,
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -2084,7 +2201,10 @@
    "id": "4ffed5d8",
    "metadata": {
     "id": "jU3kVlV5okC-",
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -2168,7 +2288,10 @@
    "id": "7c911869",
    "metadata": {
     "id": "wGsIHFgOokC_",
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -2240,7 +2363,10 @@
    "id": "d0c2d287",
    "metadata": {
     "id": "ka2Ce_WIokC_",
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -2319,7 +2445,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "64497a91",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "def train_worker(\n",
@@ -2418,12 +2548,14 @@
    "id": "d0f76325",
    "metadata": {
     "lines_to_next_cell": 2,
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
     "def train_model(vocab_src, vocab_tgt, spacy_de, spacy_en, config):\n",
-    "    from the_annotated_transformer import train_worker\n",
     "    if config[\"distributed\"]:\n",
     "        ngpus = torch.cuda.device_count()\n",
     "        os.environ[\"MASTER_ADDR\"] = \"localhost\"\n",
@@ -2561,7 +2693,10 @@
    "id": "2808304a",
    "metadata": {
     "id": "tb3j3CYLTsqN",
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -2602,7 +2737,10 @@
    "id": "900938a7",
    "metadata": {
     "id": "hAFEa78JokDB",
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -2664,7 +2802,10 @@
    "execution_count": null,
    "id": "d5e1f869",
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -2676,7 +2817,10 @@
    "execution_count": null,
    "id": "f965d8ab",
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -2772,7 +2916,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3bcdd5c3",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "def mtx2df(m, max_row, max_col, row_tokens, col_tokens):\n",
@@ -2824,7 +2972,10 @@
    "execution_count": null,
    "id": "cca09862",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -2882,7 +3033,10 @@
    "execution_count": null,
    "id": "2f337bd7",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -2924,7 +3078,10 @@
    "execution_count": null,
    "id": "1f7ee667",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -2969,7 +3126,10 @@
    "execution_count": null,
    "id": "8f8afe74",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
